# ddd-axum

./: .env  Cargo.toml  README.md
.sqlx/: query-d81d8ea29ddcfae9b204559e08408b02b41bd8ca6a9e6a32ccea9544e7e82f54.json  query-f433c6d36b03b0b39f240969055f3b734b5ac3efebb1d0a9c3538774958b955a.json
crates/application/: Cargo.toml
crates/application/src/: dto.rs  service.rs
crates/application/tests/: service_test.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  repository.rs  user.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs  persistence.rs  webclient.rs
crates/infrastructure/src/tests/: mod.rs  persistence_test.rs
crates/interfaces/: Cargo.toml
crates/interfaces/src/: handlers.rs  router.rs
migrations/: 20250427000000_create_users_table.sql  20250427000001_seed_users.sql
postgres/: docker-compose.yaml
src/: handlers_impl.rs  main.rs
src/di/: handlers.rs  mod.rs  postgres.rs  router.rs
