[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/interfaces",
]
resolver = "3"

[package]
name = "ddd-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "uuid",
    "chrono",
] }
uuid = { version = "1.16", features = ["v4"] }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }
interfaces = { path = "crates/interfaces" }
anyhow = "1.0.98"

[dev-dependencies]
infrastructure = { path = "crates/infrastructure", features = ["testing"] }

[features]
testing = ["infrastructure/testing"]
test = ["infrastructure/testing"]
