[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "uuid",
    "chrono",
] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.16", features = ["v4"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }

[features]
testing = []
