[package]
name = "interfaces"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
uuid = { version = "1.16", features = ["v4"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
axum-test = { version = "17.3", optional = true }

[features]
default = []
test = ["axum-test"]
